[package]
name = "surfgram-internal"
version = "0.1.0"
edition = "2021"
description = "Internal utilities for Surfgram. Not for external use."
license = "MIT"
repository = "https://github.com/surfgram/surfgram-internal"
readme = "README.md"

[lib]
name = "surfgram_internal"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
pyo3-build-config = "0.20"